Update delete section vh (white space bug) styles.css

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,6 @@ body {
   overflow-x: hidden;
 }
 section {
-  height: 100vh;
   width: 100%;
   position: relative;
 
